--- a/stylesheet/threegridpopup.css
+++ b/stylesheet/threegridpopup.css
@@ -110,7 +110,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding: 8px;
     position: absolute;
     z-index: 1000;
     overflow: visible;
@@ -175,7 +175,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding: 8px;
     position: absolute;
     z-index: 1000;
     overflow: visible;
@@ -240,7 +240,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding: 8px;
     position: absolute;
     z-index: 1000;
     overflow: visible;
@@ -306,7 +306,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding: 8px;
     position: absolute;
     z-index: 1000;
     overflow: visible;
@@ -371,7 +371,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding: 8px;
     position: absolute;
     z-index: 1000;
     overflow: visible;
@@ -435,7 +435,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding: 8px;
     position: absolute;
     z-index: 1000;
     overflow: visible;
@@ -498,7 +498,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding: 8px;
     position: absolute;
     z-index: 1000;
     overflow: visible;
@@ -561,7 +561,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding: 8px;
     position: absolute;
     z-index: 1000;
     overflow: visible;
@@ -624,7 +624,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding: 8px;
     position: absolute;
     z-index: 1000;
     overflow: visible;
@@ -687,7 +687,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding: 8px;
     position: absolute;
     z-index: 1000;
     overflow: visible;
@@ -750,7 +750,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding: 8px;
     position: absolute;
     z-index: 1000;
     overflow: visible;
@@ -813,7 +813,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding: 8px;
     position: absolute;
     z-index: 1000;
     overflow: visible;
@@ -877,7 +877,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding: 8px;
     position: absolute;
     z-index: 1000;
     overflow: visible;
@@ -941,7 +941,7 @@
       color: #fff;
       text-align: center;
       border-radius: 6px;
-      padding: 8px 0;
+      padding: 8px;
       position: absolute;
       z-index: 1000;
       overflow: visible;
