--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -14,27 +14,19 @@
 		font-size: 20px;
 		font-weight: bold;
 		color: #ffffff;
-		float: right;
-		padding-right: 5px;
+		position: relative;
+		z-index: 7000;
+		padding: 10px;
+
 	}
 
 	span.portfolionexttwo {
 		font-size: 20px;
 		font-weight: bold;
 		color: #ffffff;
-		float: right;
-		padding-right: 10px;
 		position: relative;
+		padding: 0px 0px 0px 10px;
 		z-index: 7000;
-	}
-
-	span.portfolioprevious {
-		font-size: 20px;
-		font-weight: bold;
-		color: #ffffff;
-		float: right;
-		margin-right: 10px;
-		padding-right: 10px;
 	}
 
 	img.portfolio_images {
@@ -943,10 +935,21 @@ label.menu__btn {
     font-weight: bold;
     color: #ffffff;
     float: none;
-		margin-left: 95vw;
-		padding: 5px;
+		margin-left: auto;
+		margin-right: auto;
+		padding: 10px;
   }
 
+	span.portfolionexttwo {
+		font-size: 20px;
+		font-weight: bold;
+		color: #ffffff;
+		float: none;
+		position: relative;
+		padding: 0px 10px;
+		z-index: 7000;
+		display: inline-block;
+	}
 
 	p.resume-prompt{
 		margin-left: 1px;
