--- a/stylesheet/nut.css
+++ b/stylesheet/nut.css
@@ -32,7 +32,7 @@
   text-align: right;
 	width: 70%;
 	height: auto;
-  box-shadow: 6px 6px 6px lightgrey;
+  box-shadow: 0px 0px 20px rgba(0, 0, 20, .5);
 /*  -webkit-transform:scale(1); /* Safari and Chrome */
 /*  -moz-transform:scale(1); /* Firefox */
 /*  -ms-transform:scale(1); /* IE 9 */
