--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -931,66 +931,13 @@ p.resume-prompt {
   }
 
   p.resume-prompt {
-    display: inline-block;
-    position: relative;
-    transform: scale(1.2);
-    top: 1vh;
-    opacity: 1;
-    color: #666666;
-    animation: resumepromptcv 1s linear infinite;
-    animation-play-state: paused;
-    animation-delay: calc(var(--scroll) * -1s);
-    animation-iteration-count: 1;
-    animation-fill-mode: both;
-  }
-  @keyframes resumepromptcv {
-    0% {
-      top: 1vh;
-      color: #666666;
-      opacity: 1;
-      -webkit-ransform: scale(1.2);
-      -moz-transform: scale(1.2);
-      -ms-transform: scale(1.2);
-      -o-transform: scale(1.2);
-      transform: scale(1.2);
-    }
-
-    15% {
-      top: 2vh;
-      opacity: 1;
-      -webkit-ransform: scale(1.2);
-      -moz-transform: scale(1.2);
-      -ms-transform: scale(1.2);
-      -o-transform: scale(1.2);
-      transform: scale(1.2);
-      color: #666666;
-    }
-
-    30% {
-      top: 3vh;
-      opacity: 0;
-      -webkit-ransform: scale(1.1);
-      -moz-transform: scale(1.1);
-      -ms-transform: scale(1.1);
-      -o-transform: scale(1.1);
-      transform: scale(1.1);
-      color: blue;
-    }
-    100% {
-      top: 3vh;
-      opacity: 0;
-      -webkit-ransform: scale(1);
-      -moz-transform: scale(1);
-      -ms-transform: scale(1);
-      -o-transform: scale(1);
-      transform: scale(1);
-    }
+    display: none;
   }
 
   img.resume_pdf{
     display: inline-block;
     position: relative;
-    opacity: 1;
+    top: 20%;
 /*    transform: rotateX(180deg) rotateY(180deg);*/
     animation: rotateab 1s linear infinite;
     animation-play-state: paused;
@@ -1000,32 +947,72 @@ p.resume-prompt {
   }
 
   @keyframes rotateab {
-    0% {
+    0%{
       opacity: 0;
-      width: 100%;
+      -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+      -o-transform: scale(1);
+      -moz-transform: scale(1);
+      transform: scale(1);
+      height: auto;
+      left: 0vw;
     }
-    15% {
+    30%{
       opacity: 1;
-      width: 100%;
-      margin-left: 0;
+      -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+      -o-transform: scale(1);
+      -moz-transform: scale(1);
+      transform: scale(1);
+      height: auto;
+      top:0vh;
+      left: 0vw;
+    }
+    32%{
+      opacity: 1;
+      -webkit-transform: scale(2);
+      -ms-transform: scale(2);
+      -o-transform: scale(2);
+      -moz-transform: scale(2);
+      transform: scale(2);
+      height: auto;
+      top:-40vh;
+      left: 30vw;
     }
 
-    35% {
+    80%{
       opacity: 1;
-      width: 120%;
-      margin-left: 0%;
+      -webkit-transform: scale(2);
+      -ms-transform: scale(2);
+      -o-transform: scale(2);
+      -moz-transform: scale(2);
+      transform: scale(2);
+      height: auto;
+      top: 0vh;
+      left: -10vw;
     }
-    50% {
-      opacity: 1;
-      width: 120%;
-      margin-left:-40%;
-    }
+
     100% {
       opacity: 1;
-      width: 100%;
+      -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+      -o-transform: scale(1);
+      -moz-transform: scale(1);
+      transform: scale(1);
+      height: auto;
+      top: 0vh;
 
     }
+
   }
+
+  #labtopresumewidth {
+    width: 100%;
+    height: 90vh;
+  		overflow: hidden;
+      position: relative;
+      top: 1vh;
+    }
 
 .container_one.intro{
 	position: relative;
@@ -1046,35 +1033,6 @@ p.resume-prompt {
     border-right: 5px solid #111111;
     border-bottom: 5px solid #555555;
     height: 85vh;
-    animation: phoneheightonphonenoshow 1s linear infinite;
-    animation-play-state: paused;
-    animation-delay: calc(var(--scroll) * -1s);
-    animation-iteration-count: 1;
-    animation-fill-mode: both;
-  }
-  @keyframes phoneheightonphonenoshow {
-    0% {
-      height: 85vh;
-      opacity: 1;
-    }
-    15% {
-      height: 85vh;
-      opacity: 1;
-    }
-
-    30% {
-      height: 25vh;
-      opacity: 1;
-    }
-
-    95% {
-      height: 25vh;
-      opacity: 1;
-    }
-    100% {
-      height: 25vh;
-      opacity: 1;
-    }
   }
 
 .container_two{
@@ -1093,13 +1051,13 @@ p.resume-prompt {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-	align-items: center;
+  	align-items: center;
     vertical-align: middle;
-	width: 45vw;
+  	width: 45vw;
     height: 20vh;
   }
 
-  .img_intrograss{
+.img_intrograss{
     position: absolute;
     z-index: 0;
     opacity: 1;
@@ -1318,29 +1276,6 @@ div.img_relative.labtop{
 	 display: none;}
 	 /*border: 1px solid green;}*/
 
-#labtopresumewidth {
-  width: 100%;
-  height: 85vh;
-		overflow: hidden;
-    position: relative;
-    top: -15vh;
-    animation: resumeheightattheendnone 1s linear infinite;
-    animation-play-state: paused;
-    animation-delay: calc(var(--scroll) * -1s);
-    animation-iteration-count: 1;
-    animation-fill-mode: both;
-  }
-  @keyframes resumeheightattheendnone {
-    0% {
-      top: -15vh;
-    }
-    95% {
-      top: -15vh;
-    }
-    100% {
-      top: 1vh;
-    }
-  }
 
 
 #totop
