--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -514,6 +514,7 @@ p.resume-prompt {
   animation-iteration-count: 1;
   animation-fill-mode: both;
 }
+
 @keyframes resumepromptcv {
   0% {
     top: -6vh;
@@ -551,7 +552,7 @@ p.resume-prompt {
   100% {
     top: 1vh;
     opacity: 0;
-    -webkit-ransform: scale();
+    -webkit-ransform: scale(1);
     -moz-transform: scale(1);
     -ms-transform: scale(1);
     -o-transform: scale(1);
@@ -574,11 +575,6 @@ p.resume-prompt {
 
   @keyframes rotateab {
     0% {
-/*      -webkit-transform: rotateY(180deg) rotateX(180deg);
-      -moz-transform: rotateY(180deg) rotateX(180deg);
-      -ms-transform: rotateY(180deg) rotateX(180deg);
-      -o-transform: rotateY(180deg) rotateX(180deg);
-      transform: rotateY(180deg) rotateX(180deg);*/
       width: 10%;
       top: 50vh;
       opacity: 0;
@@ -589,11 +585,6 @@ p.resume-prompt {
       opacity: 0;
     }
     20% {
-  /*    -webkit-transform: rotateY(90deg) rotateX(90deg);
-      -moz-transform: rotateY(90deg) rotateX(90deg);
-      -ms-transform: rotateY(90deg) rotateX(90deg);
-      -o-transform: rotateY(90deg) rotateX(90deg);
-      transform: rotateY(90deg) rotateX(90deg);*/
       width: 80%;
       top: 20vh;
       opacity: 0;
@@ -605,18 +596,12 @@ p.resume-prompt {
       opacity: 1;
     }
 
-    90% {
-    /*  -webkit-transform: rotateY(0deg) rotateX(0deg);
-      -moz-transform: rotateY(0deg) rotateX(0deg);
-      -ms-transform: rotateY(0deg) rotateX(0deg);
-      -o-transform: rotateY(0deg) rotateX(0deg);
-      transform: rotateY(0deg) rotateX(0deg);*/
+    70% {
       width: 90%;
-      top: -20vh;
+      top: -5vh;
       opacity: 1;
     }
     100% {
-    /*  transform: rotateY(0deg) rotateX(0deg);*/
       width: 60%;
       top: 8vh;
       opacity: 1;
@@ -937,78 +922,19 @@ p.resume-prompt {
   img.resume_pdf{
     display: inline-block;
     position: relative;
-    top: 20%;
-/*    transform: rotateX(180deg) rotateY(180deg);*/
-    animation: rotateab 1s linear infinite;
-    animation-play-state: paused;
-    animation-delay: calc(var(--scroll) * -1s);
-    animation-iteration-count: 1;
-    animation-fill-mode: both;
-  }
-
-  @keyframes rotateab {
-    0%{
-      opacity: 0;
-      -webkit-transform: scale(1);
-      -ms-transform: scale(1);
-      -o-transform: scale(1);
-      -moz-transform: scale(1);
-      transform: scale(1);
+    top: 25%;
+      -webkit-transform: scale(1.5);
+      -ms-transform: scale(1.5);
+      -o-transform: scale(1.5);
+      -moz-transform: scale(1.5);
+      transform: scale(1.5);
       height: auto;
       left: 0vw;
-    }
-    30%{
-      opacity: 1;
-      -webkit-transform: scale(1);
-      -ms-transform: scale(1);
-      -o-transform: scale(1);
-      -moz-transform: scale(1);
-      transform: scale(1);
-      height: auto;
-      top:0vh;
-      left: 0vw;
-    }
-    32%{
-      opacity: 1;
-      -webkit-transform: scale(2);
-      -ms-transform: scale(2);
-      -o-transform: scale(2);
-      -moz-transform: scale(2);
-      transform: scale(2);
-      height: auto;
-      top:-40vh;
-      left: 30vw;
-    }
-
-    80%{
-      opacity: 1;
-      -webkit-transform: scale(2);
-      -ms-transform: scale(2);
-      -o-transform: scale(2);
-      -moz-transform: scale(2);
-      transform: scale(2);
-      height: auto;
-      top: 0vh;
-      left: -10vw;
-    }
-
-    100% {
-      opacity: 1;
-      -webkit-transform: scale(1);
-      -ms-transform: scale(1);
-      -o-transform: scale(1);
-      -moz-transform: scale(1);
-      transform: scale(1);
-      height: auto;
-      top: 0vh;
-
-    }
-
   }
 
   #labtopresumewidth {
     width: 100%;
-    height: 90vh;
+    height: 70vh;
   		overflow: hidden;
       position: relative;
       top: 1vh;
@@ -1150,7 +1076,7 @@ h2.button-row > a::before, h2.button-row > a::after{
 div.img_relative.labtop{
     width: 95%;
     margin: auto;
-    height: 80vh;
+    height: 70vh;
   }
 
   p#hello{
