--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -961,6 +961,34 @@ p.resume-prompt {
     height: 85vh;
   }
 
+  div.container_one.contactpage{
+    position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    	align-items: center;
+      vertical-align: middle;
+  	  width: 80vw;
+      overflow: hidden;
+    	background: 50vh;
+      margin-top: 3vh;
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: 50px 50px 0 0;
+      border-top: 5px solid #222222;
+      border-left: 5px solid #333333;
+      border-right: 5px solid #111111;
+      border-bottom: 0px;
+      height: 25vh;
+      background: red;
+    background: -webkit-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(white, #33273d, #003c5f, #C04E01); /* Standard syntax */
+    object-fit: cover;
+    object-position: 55%;
+  }
+
 .container_two{
     position: relative;
     display: flex;
