--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -17,8 +17,8 @@
 
   .container_one.intro{
 	  width: 80vw;
-	  height: 95vh;
-    margin-top: 12vh;
+	  height: 90vh;
+    margin-top: 5vh;
     margin-left: auto;
     margin-right: auto;
     border-radius: 25px;
@@ -26,7 +26,54 @@
     border-left: 20px solid #333333;
     border-right: 20px solid #111111;
     border-bottom: 20px solid #555555;
-	}
+    animation: resizeingbigmacoverall 2s linear infinite;
+    animation-play-state: paused;
+    animation-delay: calc(var(--scroll) * -1s);
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+    }
+
+  @keyframes resizeingbigmacoverall {
+    0% {
+      top: 10vh;
+      height: 90vh;
+      -webkit-ransform: scale(1);
+      -moz-transform: scale(1);
+      -ms-transform: scale(1);
+      -o-transform: scale(1);
+      transform: scale(1);
+    }
+
+    20% {
+      top: 10vh;
+      height: 90vh;
+      -webkit-ransform: scale(1);
+      -moz-transform: scale(1);
+      -ms-transform: scale(1);
+      -o-transform: scale(1);
+      transform: scale(1);
+    }
+
+    90% {
+      top: 15vh;
+      height: 100vh;
+      -webkit-ransform: scale(.5);
+      -moz-transform: scale(.5);
+      -ms-transform: scale(.5);
+      -o-transform: scale(.5);
+      transform: scale(.5);
+    }
+
+    100% {
+      top: 15vh;
+      height: 100vh;
+      -webkit-ransform: scale(.5);
+      -moz-transform: scale(.5);
+      -ms-transform: scale(.5);
+      -o-transform: scale(.5);
+      transform: scale(.5);
+    }
+  }
 
 	.row.nut {
 		width: 100%;
@@ -369,7 +416,7 @@ p.resume-prompt{
   div.img_relative.labtop{
     width: 50%;
     margin: auto;
-    height: 75vh;
+    height: 50vh;
   }
 
   .carousel-inner{
@@ -437,7 +484,7 @@ p.resume-prompt{
       overflow: hidden;
       display: block;
       position: relative;
-    height: 20vh;
+    height: 15vh;
   	background: red;
     background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
@@ -517,6 +564,7 @@ p.resume-prompt {
 
 @keyframes resumepromptcv {
   0% {
+    display: inline-block;
     top: -6vh;
     color: #666666;
     opacity: 1;
@@ -527,7 +575,7 @@ p.resume-prompt {
     transform: scale(1.2);
   }
 
-  40% {
+  35% {
     top: -4vh;
     opacity: 1;
     -webkit-ransform: scale(1.2);
@@ -538,25 +586,31 @@ p.resume-prompt {
     color: #666666;
   }
 
-  55% {
-    top: 1vh;
-    opacity: 0;
-    -webkit-ransform: scale(1.3);
-    -moz-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    -o-transform: scale(1.3);
-    transform: scale(1.3);
-    color: blue;
-  }
+  45% {
+    top: -4vh;
+    opacity: 1;
+    -webkit-ransform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2);
+    color: darkgreen;
+    }
+
+    60% {
+      top: -4vh;
+      opacity: 1;
+      -webkit-ransform: scale(.1);
+      -moz-transform: scale(.1);
+      -ms-transform: scale(.1);
+      -o-transform: scale(.1);
+      transform: scale(.1);
+      color: darkgreen;
+      display: none;
+    }
 
   100% {
-    top: 1vh;
-    opacity: 0;
-    -webkit-ransform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-    transform: scale(1);
+    display: none;
   }
 }
 
@@ -586,7 +640,7 @@ p.resume-prompt {
     }
     20% {
       width: 80%;
-      top: 20vh;
+      top: 10vh;
       opacity: 0;
     }
 
@@ -598,12 +652,12 @@ p.resume-prompt {
 
     70% {
       width: 90%;
-      top: -5vh;
+      top: 10vh;
       opacity: 1;
     }
     100% {
       width: 60%;
-      top: 8vh;
+      top: 10vh;
       opacity: 1;
     }
   }
@@ -637,7 +691,7 @@ p.resume-prompt {
   }
 
   div.img_relative.labtop{
-    height: 90vh;
+    height: 70vh;
     margin: auto;
   }
 
@@ -845,7 +899,7 @@ p.resume-prompt {
   .container_contacts{
     display: block;
     margin-left: 0%;
-    margin-top: 1%;
+    margin-top: 5%;
     margin-bottom: 20%;
     zoom: 100%;
     width: 105%;
@@ -922,7 +976,7 @@ p.resume-prompt {
     -o-transform: scale(.9);
     -moz-transform: scale(.9);
     transform: scale(.9);
-
+    top: -23%;
     animation: forphonetoshownoneprompt 1s linear infinite;
     animation-play-state: paused;
     animation-delay: calc(var(--scroll) * -1s);
@@ -932,9 +986,15 @@ p.resume-prompt {
 
   @keyframes forphonetoshownoneprompt {
     0%{
+      opacity: 0;
+      display: block;
+    }
+    40% {
+      opacity: 1;
       display: block;
     }
     50% {
+      opacity: 0;
       display: none;
     }
     100% {
@@ -982,6 +1042,23 @@ p.resume-prompt {
     border-right: 5px solid #111111;
     border-bottom: 5px solid #555555;
     height: 85vh;
+    animation: toptopphoneintroone 2s linear infinite;
+    animation-play-state: paused;
+    animation-delay: calc(var(--scroll) * -1s);
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+    }
+
+  @keyframes toptopphoneintroone {
+    0% {
+      top: 15vh;
+    }
+    30% {
+      top: -25vh;
+    }
+    100% {
+      top: 45vh;
+    }
   }
 
   div.container_one.contactpage{
@@ -994,7 +1071,7 @@ p.resume-prompt {
   	  width: 80vw;
       overflow: hidden;
     	background: 50vh;
-      margin-top: 3vh;
+      margin-top: 10vh;
       margin-left: auto;
       margin-right: auto;
       border-radius: 50px 50px 0 0;
@@ -1002,7 +1079,7 @@ p.resume-prompt {
       border-left: 5px solid #333333;
       border-right: 5px solid #111111;
       border-bottom: 0px;
-      height: 25vh;
+      height: 15vh;
       background: red;
     background: -webkit-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(white, #33273d, #003c5f, #C04E01); /* For Opera 11.1 to 12.0 */
