--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -45,7 +45,7 @@
     }
 
     20% {
-      top: 10vh;
+      top: -10vh;
       height: 90vh;
       -webkit-ransform: scale(1);
       -moz-transform: scale(1);
@@ -180,7 +180,28 @@
     height: 8.66em;
     transform: rotate(60deg) skewX(30deg);
     margin-top: -2%;
-  }
+    animation: movingmonitortraptop 2s linear infinite;
+    animation-play-state: paused;
+    animation-delay: calc(var(--scroll) * -1s);
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+    }
+
+  @keyframes movingmonitortraptop {
+    0% {
+      margin-top: -2vh;
+
+    }
+    30% {
+      margin-top: -20vh;
+
+    }
+    60% {
+      margin-top: -20vh;
+    }
+    100% {
+      margin-top: -20vh;
+    }
 
   .trapezoid:before {
     display: block;
@@ -257,7 +278,7 @@ p.resume-prompt {
   }
 
   55% {
-    top: 1vh;
+    top: -20vh;
     opacity: 0;
     -webkit-ransform: scale(1.3);
     -moz-transform: scale(1.3);
@@ -296,11 +317,6 @@ p.resume-prompt {
 
   @keyframes rotateab {
     0% {
-/*      -webkit-transform: rotateY(180deg) rotateX(180deg);
-      -moz-transform: rotateY(180deg) rotateX(180deg);
-      -ms-transform: rotateY(180deg) rotateX(180deg);
-      -o-transform: rotateY(180deg) rotateX(180deg);
-      transform: rotateY(180deg) rotateX(180deg);*/
       width: 10%;
       top: 50vh;
       opacity: 0;
@@ -311,11 +327,6 @@ p.resume-prompt {
       opacity: 0;
     }
     20% {
-  /*    -webkit-transform: rotateY(90deg) rotateX(90deg);
-      -moz-transform: rotateY(90deg) rotateX(90deg);
-      -ms-transform: rotateY(90deg) rotateX(90deg);
-      -o-transform: rotateY(90deg) rotateX(90deg);
-      transform: rotateY(90deg) rotateX(90deg);*/
       width: 80%;
       top: 20vh;
       opacity: 0;
@@ -328,11 +339,6 @@ p.resume-prompt {
     }
 
     90% {
-    /*  -webkit-transform: rotateY(0deg) rotateX(0deg);
-      -moz-transform: rotateY(0deg) rotateX(0deg);
-      -ms-transform: rotateY(0deg) rotateX(0deg);
-      -o-transform: rotateY(0deg) rotateX(0deg);
-      transform: rotateY(0deg) rotateX(0deg);*/
       width: 80%;
       top: -50vh;
       opacity: 1;
@@ -340,7 +346,7 @@ p.resume-prompt {
     100% {
     /*  transform: rotateY(0deg) rotateX(0deg);*/
       width: 45%;
-      top: -10vh;
+      top: -35vh;
       opacity: 1;
     }
   }
@@ -552,7 +558,7 @@ p.resume-prompt {
   display: inline-block;
   position: relative;
   transform: scale(1.2);
-  top: -6vh;
+  top: -25vh;
   opacity: 1;
   color: #666666;
   animation: resumepromptcv 1s linear infinite;
@@ -565,7 +571,7 @@ p.resume-prompt {
 @keyframes resumepromptcv {
   0% {
     display: inline-block;
-    top: -6vh;
+    top: 50vh;
     color: #666666;
     opacity: 1;
     -webkit-ransform: scale(1.2);
@@ -576,7 +582,7 @@ p.resume-prompt {
   }
 
   35% {
-    top: -4vh;
+    top: -17vh;
     opacity: 1;
     -webkit-ransform: scale(1.2);
     -moz-transform: scale(1.2);
@@ -587,7 +593,7 @@ p.resume-prompt {
   }
 
   45% {
-    top: -4vh;
+    top: -17vh;
     opacity: 1;
     -webkit-ransform: scale(1.2);
     -moz-transform: scale(1.2);
@@ -597,9 +603,9 @@ p.resume-prompt {
     color: darkgreen;
     }
 
-    60% {
-      top: -4vh;
-      opacity: 1;
+    46% {
+      top: -17vh;
+      opacity: 0;
       -webkit-ransform: scale(.1);
       -moz-transform: scale(.1);
       -ms-transform: scale(.1);
@@ -634,30 +640,36 @@ p.resume-prompt {
       opacity: 0;
     }
     15%{
-      width: 70%;
+      width: 30%;
       top: 50vh;
       opacity: 0;
     }
     20% {
-      width: 80%;
-      top: 10vh;
+      width: 50%;
+      top: -10vh;
       opacity: 0;
+    }
+    40% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
     }
 
     60% {
-      width: 100%;
-      top: -5vh;
+      width: 80%;
+      top: -25vh;
       opacity: 1;
     }
 
     70% {
-      width: 90%;
-      top: 10vh;
+      width: 80%;
+      top: -10vh;
       opacity: 1;
     }
     100% {
-      width: 60%;
-      top: 10vh;
+      width: 40%;
+      top: -10vh;
       opacity: 1;
     }
   }
@@ -976,7 +988,7 @@ p.resume-prompt {
     -o-transform: scale(.9);
     -moz-transform: scale(.9);
     transform: scale(.9);
-    top: -23%;
+    top: 10%;
     animation: forphonetoshownoneprompt 1s linear infinite;
     animation-play-state: paused;
     animation-delay: calc(var(--scroll) * -1s);
@@ -1013,6 +1025,35 @@ p.resume-prompt {
       transform: scale(1.5);
       height: auto;
       left: 0vw;
+      animation: resumepdfabcabc 1s linear infinite;
+      animation-play-state: paused;
+      animation-delay: calc(var(--scroll) * -1s);
+      animation-iteration-count: 1;
+      animation-fill-mode: both;
+    }
+
+    @keyframes resumepdfabcabc {
+      0% {
+        width: 10%;
+        top: 25%;
+        opacity: 0;
+      }
+      40% {
+        opacity: 0;
+        top: -25%;
+        width: 120%;
+
+      }
+      50% {
+        width: 120%;
+        top: -25%;
+        opacity: 1;
+      }
+      100% {
+        width: 80%;
+        top: 25%;
+        opacity: 1;
+      }
   }
 
   #labtopresumewidth {
@@ -1204,7 +1245,24 @@ h2.button-row > a::before, h2.button-row > a::after{
 div.img_relative.labtop{
     width: 95%;
     margin: auto;
-    height: 60vh;
+    height: 50vh;
+    animation: toptopphoneintrooneabc 2s linear infinite;
+    animation-play-state: paused;
+    animation-delay: calc(var(--scroll) * -1s);
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+    }
+
+  @keyframes toptopphoneintrooneabc {
+    0% {
+      top: 15vh;
+    }
+    30% {
+      top: -50vh;
+    }
+    100% {
+      top: 130vh;
+    }
   }
 
   p#hello{
