--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -988,7 +988,7 @@ p.resume-prompt {
     -o-transform: scale(.9);
     -moz-transform: scale(.9);
     transform: scale(.9);
-    top: 10%;
+    top: -85%;
     animation: forphonetoshownoneprompt 1s linear infinite;
     animation-play-state: paused;
     animation-delay: calc(var(--scroll) * -1s);
@@ -1001,12 +1001,12 @@ p.resume-prompt {
       opacity: 0;
       display: block;
     }
-    40% {
+    20% {
       opacity: 1;
       display: block;
     }
     50% {
-      opacity: 0;
+      opacity: 1;
       display: none;
     }
     100% {
@@ -1034,34 +1034,78 @@ p.resume-prompt {
 
     @keyframes resumepdfabcabc {
       0% {
-        width: 10%;
+        position: relative;
+        -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        transform: scale(1.1);
         top: 25%;
         opacity: 0;
       }
-      40% {
+      20% {
+        position: relative;
         opacity: 0;
-        top: -25%;
-        width: 120%;
+        top: 0%;
+        -webkit-transform: scale(2);
+        -ms-transform: scale(2);
+        -o-transform: scale(2);
+        -moz-transform: scale(2);
+        transform: scale(2);
 
       }
-      50% {
-        width: 120%;
-        top: -25%;
+      35% {
+        position: relative;
+        -webkit-transform: scale(2);
+        -ms-transform: scale(2);
+        -o-transform: scale(2);
+        -moz-transform: scale(2);
+        transform: scale(2);
+        top: -5%;
         opacity: 1;
+        margin-left: 20vw;
+      }
+      50% {
+        position: relative;
+        -webkit-transform: scale(2.5);
+        -ms-transform: scale(2.5);
+        -o-transform: scale(2.5);
+        -moz-transform: scale(2.5);
+        transform: scale(2.5);
+        top: -1%;
+        opacity: 1;
+        margin-left: -40vw;
+      }
+      70% {
+        position: relative;
+        -webkit-transform: scale(2.5);
+        -ms-transform: scale(2.5);
+        -o-transform: scale(2.5);
+        -moz-transform: scale(2.5);
+        transform: scale(2.5);
+        top: -1%;
+        opacity: 1;
+        marrgin-left: auto;
       }
       100% {
-        width: 80%;
-        top: 25%;
+        position: relative;
+        -webkit-transform: scale(1.5);
+        -ms-transform: scale(1.5);
+        -o-transform: scale(1.5);
+        -moz-transform: scale(1.5);
+        transform: scale(1.5);
+        top: -15%;
         opacity: 1;
+        marrgin-left: auto;
       }
   }
 
   #labtopresumewidth {
     width: 100%;
-    height: 70vh;
+    height: 20vh;
   		overflow: hidden;
       position: relative;
-      top: 1vh;
+      top: -15vh;
     }
 
 .container_one.intro{
@@ -1094,11 +1138,17 @@ p.resume-prompt {
     0% {
       top: 15vh;
     }
-    30% {
-      top: -25vh;
+    15% {
+      top: -35vh;
+    }
+    25% {
+      top: -65vh;
+    }
+    40% {
+      top: -6vh;
     }
     100% {
-      top: 45vh;
+      top: -6vh;
     }
   }
 
