--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -988,7 +988,7 @@ p.resume-prompt {
     -o-transform: scale(.9);
     -moz-transform: scale(.9);
     transform: scale(.9);
-    top: -85%;
+    top: -110%;
     animation: forphonetoshownoneprompt 1s linear infinite;
     animation-play-state: paused;
     animation-delay: calc(var(--scroll) * -1s);
@@ -1007,10 +1007,11 @@ p.resume-prompt {
     }
     50% {
       opacity: 1;
-      display: none;
+      display: block;
     }
     100% {
-      display: none;
+      display: block;
+      opacity: 0;
     }
   }
 
@@ -1018,11 +1019,11 @@ p.resume-prompt {
     display: inline-block;
     position: relative;
     top: 25%;
-      -webkit-transform: scale(1.5);
-      -ms-transform: scale(1.5);
-      -o-transform: scale(1.5);
-      -moz-transform: scale(1.5);
-      transform: scale(1.5);
+      -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+      -o-transform: scale(1);
+      -moz-transform: scale(1);
+      transform: scale(1);
       height: auto;
       left: 0vw;
       animation: resumepdfabcabc 1s linear infinite;
@@ -1040,63 +1041,44 @@ p.resume-prompt {
         -o-transform: scale(1.1);
         -moz-transform: scale(1.1);
         transform: scale(1.1);
-        top: 25%;
+        margin-top: 200vh;
         opacity: 0;
       }
-      20% {
+      30% {
         position: relative;
-        opacity: 0;
-        top: 0%;
-        -webkit-transform: scale(2);
-        -ms-transform: scale(2);
-        -o-transform: scale(2);
-        -moz-transform: scale(2);
-        transform: scale(2);
-
-      }
-      35% {
-        position: relative;
-        -webkit-transform: scale(2);
-        -ms-transform: scale(2);
-        -o-transform: scale(2);
-        -moz-transform: scale(2);
-        transform: scale(2);
-        top: -5%;
+        -webkit-transform: scale(1.7);
+        -ms-transform: scale(1.7);
+        -o-transform: scale(1.7);
+        -moz-transform: scale(1.7);
+        transform: scale(1.7);
+        top: 35%;
         opacity: 1;
         margin-left: 20vw;
+        margin-top: 50vh;
       }
       50% {
         position: relative;
-        -webkit-transform: scale(2.5);
-        -ms-transform: scale(2.5);
-        -o-transform: scale(2.5);
-        -moz-transform: scale(2.5);
-        transform: scale(2.5);
-        top: -1%;
+        -webkit-transform: scale(1.7);
+        -ms-transform: scale(1.7);
+        -o-transform: scale(1.7);
+        -moz-transform: scale(1.7);
+        transform: scale(1.7);
+        top: 35%;
         opacity: 1;
-        margin-left: -40vw;
-      }
-      70% {
-        position: relative;
-        -webkit-transform: scale(2.5);
-        -ms-transform: scale(2.5);
-        -o-transform: scale(2.5);
-        -moz-transform: scale(2.5);
-        transform: scale(2.5);
-        top: -1%;
-        opacity: 1;
-        marrgin-left: auto;
+        margin-left: -50vw;
+        margin-top: 37vh;
       }
       100% {
         position: relative;
-        -webkit-transform: scale(1.5);
-        -ms-transform: scale(1.5);
-        -o-transform: scale(1.5);
-        -moz-transform: scale(1.5);
-        transform: scale(1.5);
-        top: -15%;
+        -webkit-transform: scale(1.2);
+        -ms-transform: scale(1.2);
+        -o-transform: scale(1.2);
+        -moz-transform: scale(1.2);
+        transform: scale(1.2);
+        top: -50%;
         opacity: 1;
-        marrgin-left: auto;
+        margin-left: -22vw;
+        margin-top: 37vh;
       }
   }
 
@@ -1105,11 +1087,12 @@ p.resume-prompt {
     height: 20vh;
   		overflow: hidden;
       position: relative;
-      top: -15vh;
+      top: -25vh;
+      position: fixed;
     }
 
 .container_one.intro{
-	position: relative;
+	 position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -1139,16 +1122,16 @@ p.resume-prompt {
       top: 15vh;
     }
     15% {
-      top: -35vh;
+      top: -45vh;
     }
     25% {
       top: -65vh;
     }
     40% {
-      top: -6vh;
+      top: -40vh;
     }
     100% {
-      top: -6vh;
+      top: -40vh;
     }
   }
 
@@ -1162,7 +1145,7 @@ p.resume-prompt {
   	  width: 80vw;
       overflow: hidden;
     	background: 50vh;
-      margin-top: 10vh;
+      margin-top: auto;
       margin-left: auto;
       margin-right: auto;
       border-radius: 50px 50px 0 0;
@@ -1295,7 +1278,7 @@ h2.button-row > a::before, h2.button-row > a::after{
 div.img_relative.labtop{
     width: 95%;
     margin: auto;
-    height: 50vh;
+    height: 20vh;
     animation: toptopphoneintrooneabc 2s linear infinite;
     animation-play-state: paused;
     animation-delay: calc(var(--scroll) * -1s);
