--- a/stylesheet/threegridpopup.css
+++ b/stylesheet/threegridpopup.css
@@ -1,5 +1,21 @@
 @media (max-width:5480px){
 
+  .click-zoom input[type=checkbox] {
+    display: none
+  }
+
+  .click-zoom img {
+    margin: 0px;
+    transition: transform .5s ease;
+    cursor: zoom-in
+  }
+
+  .click-zoom input[type=checkbox]:checked~img {
+    transform: scale(1.3);
+    cursor: zoom-out;
+    margin-top: 12%;
+  }
+
   .titleforpopup {
     width: 525px;
     margin: auto;
@@ -8,8 +24,6 @@
     font-size: 12pt;
     font-weight: bold;
     text-align: left;
-    text-decoration: underline;
-    text-underline-offset: 13px;
     line-height: 1.25;
   }
 
@@ -996,11 +1010,9 @@
       margin: auto;
       padding: 10px 4px;
       font-family: lato;
-      font-size: 10.5pt;
+      font-size: 12pt;
       font-weight: bold;
       text-align: left;
-      text-decoration: underline;
-      text-underline-offset: 9px;
       line-height: 1.25;
     }
 
@@ -1009,7 +1021,7 @@
     margin: auto;
     padding: 8px 4px;
     font-family: lato;
-    font-size: 9.5pt;
+    font-size: 10.5pt;
     line-height: 1.3em;
   }
 
