--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -11,22 +11,23 @@
 	}
 
 	span.close-btn-xy {
-		font-size: 20px;
+		font-size: 30px;
 		font-weight: bold;
 		color: #ffffff;
 		position: relative;
 		z-index: 7000;
-		padding: 10px;
+		margin: 10px 20px;
 
 	}
 
 	span.portfolionexttwo {
-		font-size: 20px;
+		font-size: 17px;
 		font-weight: bold;
 		color: #ffffff;
 		position: relative;
-		padding: 0px 0px 0px 10px;
+		margin: 0px 20px;
 		z-index: 7000;
+		top: -3px;
 	}
 
 	img.portfolio_images {
