--- a/stylesheet/threegridpopup.css
+++ b/stylesheet/threegridpopup.css
@@ -1025,6 +1025,15 @@
     line-height: 1.3em;
   }
 
+  .popup9 .show9, .popupthree .showthree, .popuptwo .showtwo, .popup .show, .popup15 .show15, .popupfour .showfour, .popupfive .showfive {
+    top: 60%;
+  }
+  .popupsix .showsix, .popupseven .showseven, .popup8 .show8, .popup10 .show10, .popup11 .show11, .popup12 .show12, .popup13 .show13, .popup14 .show14  {
+    top: 60%;
+  }
+
+
+
 
 
   /* end of popup */
