--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -23,6 +23,7 @@
   .container_one.intro {
   	  width: 80vw;
   	  height: 90vh;
+      top: 10vh;
       margin-top: 5vh;
       margin-left: auto;
       margin-right: auto;
@@ -44,18 +45,16 @@
 
   @keyframes resizeingbigmacoverall {
     0% {
-      top: 10vh;
       height: 90vh;
       -webkit-ransform: scale(1);
       -moz-transform: scale(1);
       -ms-transform: scale(1);
       -o-transform: scale(1);
       transform: scale(1);
-
+      filter: hue-rotate(0deg);
     }
 
-    20% {
-      top: -10vh;
+    25% {
       height: 90vh;
       -webkit-ransform: scale(1);
       -moz-transform: scale(1);
@@ -65,18 +64,16 @@
     }
 
     90% {
-      top: 15vh;
-      height: 100vh;
-      -webkit-ransform: scale(.5);
-      -moz-transform: scale(.5);
-      -ms-transform: scale(.5);
-      -o-transform: scale(.5);
-      transform: scale(.5);
+      height: 90vh;
+      -webkit-ransform: scale(1);
+      -moz-transform: scale(1);
+      -ms-transform: scale(1);
+      -o-transform: scale(1);
+      transform: scale(1);
     }
 
     100% {
-      top: 15vh;
-      height: 100vh;
+      height: 90vh;
       -webkit-ransform: scale(.5);
       -moz-transform: scale(.5);
       -ms-transform: scale(.5);
@@ -84,8 +81,6 @@
       transform: scale(.5);
     }
   }
-
-
 
 
 	.row.nut {
@@ -141,14 +136,6 @@
   }
 
 
-
-  hr {
-    height: 2px;
-    box-shadow: none;
-    background-color: white;
-    opacity: .9;
-  }
-
   h2.button-row {
     letter-spacing: .15em;
     font-size: 1vw;
@@ -202,18 +189,18 @@
 
   @keyframes movingmonitortraptop {
     0% {
-      margin-top: -2vh;
+      margin-top: 20vh;
 
     }
-    30% {
-      margin-top: -20vh;
+    25% {
+      margin-top: 20vh;
 
     }
-    60% {
-      margin-top: -20vh;
+    90% {
+      margin-top: 20vh;
     }
     100% {
-      margin-top: -20vh;
+      margin-top: 20vh;
     }
 
   .trapezoid:before {
@@ -253,12 +240,10 @@
   }
 
 
-
 p.resume-prompt {
   display: inline-block;
   position: relative;
   transform: scale(1.2);
-  top: -6vh;
   opacity: 1;
   color: #666666;
   animation: resumepromptcv 1s linear infinite;
@@ -267,9 +252,9 @@ p.resume-prompt {
   animation-iteration-count: 1;
   animation-fill-mode: both;
 }
+
 @keyframes resumepromptcv {
   0% {
-    top: -6vh;
     color: #666666;
     opacity: 1;
     -webkit-ransform: scale(1.2);
@@ -280,7 +265,6 @@ p.resume-prompt {
   }
 
   40% {
-    top: -4vh;
     opacity: 1;
     -webkit-ransform: scale(1.2);
     -moz-transform: scale(1.2);
@@ -291,24 +275,22 @@ p.resume-prompt {
   }
 
   55% {
-    top: -20vh;
-    opacity: 0;
-    -webkit-ransform: scale(1.3);
-    -moz-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    -o-transform: scale(1.3);
-    transform: scale(1.3);
+    opacity: 1;
+    -webkit-ransform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2);
     color: blue;
   }
 
   100% {
-    top: 1vh;
-    opacity: 0;
-    -webkit-ransform: scale();
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-    transform: scale(1);
+    opacity: 1;
+    -webkit-ransform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2);
   }
 }
 
@@ -317,7 +299,7 @@ p.resume-prompt {
     display: inline-block;
     position: relative;
     width: 70%;
-    top: 0px;
+    top: 0;
     height: 75%;
     opacity: 0;
   /*  transform: rotateX(180deg) rotateY(180deg); */
@@ -331,35 +313,35 @@ p.resume-prompt {
   @keyframes rotateab {
     0% {
       width: 10%;
-      top: 50vh;
+      top: 0;
       opacity: 0;
     }
-    15%{
+    40%{
       width: 70%;
-      top: 50vh;
+      top: 0;
       opacity: 0;
     }
-    20% {
+    70% {
       width: 80%;
-      top: 20vh;
+      top: 0;
       opacity: 0;
     }
 
-    55% {
+    80% {
       width: 90%;
-      top: -10vh;
+      top: 0;
       opacity: 1;
     }
 
     90% {
       width: 80%;
-      top: -50vh;
+      top: 0;
       opacity: 1;
     }
     100% {
     /*  transform: rotateY(0deg) rotateX(0deg);*/
-      width: 45%;
-      top: -25vh;
+      width: 25%;
+      top: 0;
       opacity: 1;
     }
   }
@@ -406,11 +388,11 @@ p.resume-prompt{
   font-family: 'Lato', serif;
   font-size: 12pt;
   letter-spacing: .1em;
-  line-height: 2;
+  line-height: 1.5;
   opacity: 1;
   padding-left: 2%;
-  margin-top: 3%;
-  margin-bottom:2%;
+  margin-top: 2%;
+  margin-bottom:1%;
   text-align: left;
 }
 
@@ -526,7 +508,15 @@ p.resume-prompt{
     width: 10em;
     height: 8.66em;
     transform: rotate(60deg) skewX(30deg);
-    margin-top: -.5%;
+  }
+
+
+  div.trapezoiddiv {
+    display: inherit;
+  }
+
+  .trapezoid {
+    display: inherit;
   }
 
   .trapezoid:before {
@@ -571,7 +561,6 @@ p.resume-prompt {
   display: inline-block;
   position: relative;
   transform: scale(1.2);
-  top: -25vh;
   opacity: 1;
   color: #666666;
   animation: resumepromptcv 1s linear infinite;
@@ -584,7 +573,6 @@ p.resume-prompt {
 @keyframes resumepromptcv {
   0% {
     display: inline-block;
-    top: 50vh;
     color: #666666;
     opacity: 1;
     -webkit-ransform: scale(1.2);
@@ -594,8 +582,7 @@ p.resume-prompt {
     transform: scale(1.2);
   }
 
-  35% {
-    top: -17vh;
+  40% {
     opacity: 1;
     -webkit-ransform: scale(1.2);
     -moz-transform: scale(1.2);
@@ -605,8 +592,7 @@ p.resume-prompt {
     color: #666666;
   }
 
-  45% {
-    top: -17vh;
+  50% {
     opacity: 1;
     -webkit-ransform: scale(1.2);
     -moz-transform: scale(1.2);
@@ -616,20 +602,24 @@ p.resume-prompt {
     color: darkgreen;
     }
 
-    46% {
-      top: -17vh;
-      opacity: 0;
-      -webkit-ransform: scale(.1);
-      -moz-transform: scale(.1);
-      -ms-transform: scale(.1);
-      -o-transform: scale(.1);
-      transform: scale(.1);
+    90% {
+      opacity: 1;
+      -webkit-ransform: scale(1.2);
+      -moz-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+      -o-transform: scale(1.2);
+      transform: scale(1.2);
       color: darkgreen;
-      display: none;
     }
 
   100% {
-    display: none;
+    opacity: 1;
+    -webkit-ransform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+    color: darkgreen;
   }
 }
 
@@ -648,41 +638,28 @@ p.resume-prompt {
 
   @keyframes rotateab {
     0% {
-      width: 10%;
-      top: 50vh;
-      opacity: 0;
-    }
-    15%{
-      width: 30%;
-      top: 50vh;
-      opacity: 0;
-    }
-    20% {
-      width: 50%;
-      top: -10vh;
-      opacity: 0;
-    }
-    40% {
-      opacity: 0;
-    }
-    50% {
+      width: 80%;
+      top: 0vh;
       opacity: 1;
     }
-
-    60% {
+    50%{
       width: 80%;
-      top: -25vh;
+      top: 0vh;
       opacity: 1;
     }
-
-    70% {
+    65% {
       width: 80%;
-      top: -10vh;
+      top: -75vh;
+      opacity: 1;
+    }
+    80% {
+      width: 80%;
+      top: -150vh;
       opacity: 1;
     }
     100% {
-      width: 40%;
-      top: -10vh;
+      width: 30%;
+      top: -5vh;
       opacity: 1;
     }
   }
@@ -716,7 +693,7 @@ p.resume-prompt {
   }
 
   div.img_relative.labtop{
-    height: 70vh;
+    height: 80vh;
     margin: auto;
   }
 
@@ -924,7 +901,7 @@ p.resume-prompt {
   .container_contacts{
     display: block;
     margin-left: 0%;
-    margin-top: 5%;
+    margin-top: 2%;
     margin-bottom: 20%;
     zoom: 100%;
     width: 105%;
@@ -979,11 +956,11 @@ p.resume-prompt {
         opacity: 1;
       }
 
-    5% {
+    3% {
         opacity: 1;
       }
 
-    7% {
+    5% {
       opacity: 0;
     }
 
@@ -1000,7 +977,7 @@ p.resume-prompt {
     display: none;
   }
 
-  p.resume-prompt {
+  p. {
     display: block;
     -webkit-transform: scale(.9);
     -ms-transform: scale(.9);
@@ -1020,6 +997,7 @@ p.resume-prompt {
       opacity: 0;
       display: block;
     }
+
     20% {
       opacity: 1;
       display: block;
@@ -1030,7 +1008,7 @@ p.resume-prompt {
     }
     100% {
       display: block;
-      opacity: 0;
+      opacity: 1;
     }
   }
 
@@ -1042,7 +1020,6 @@ p.resume-prompt {
   img.resume_pdf{
     display: inline-block;
     position: relative;
-    top: 25%;
       -webkit-transform: scale(1);
       -ms-transform: scale(1);
       -o-transform: scale(1);
@@ -1066,7 +1043,7 @@ p.resume-prompt {
         -moz-transform: scale(1.1);
         transform: scale(1.1);
         margin-top: 200vh;
-        opacity: 0;
+        opacity: 1;
       }
       45% {
         position: relative;
@@ -1075,7 +1052,6 @@ p.resume-prompt {
         -o-transform: scale(1.7);
         -moz-transform: scale(1.7);
         transform: scale(1.7);
-        top: 35%;
         opacity: 1;
         margin-left: 20vw;
         margin-top: 50vh;
@@ -1087,7 +1063,6 @@ p.resume-prompt {
         -o-transform: scale(1.7);
         -moz-transform: scale(1.7);
         transform: scale(1.7);
-        top: 35%;
         opacity: 1;
         margin-left: -50vw;
         margin-top: 35vh;
@@ -1099,7 +1074,6 @@ p.resume-prompt {
         -o-transform: scale(1.2);
         -moz-transform: scale(1.2);
         transform: scale(1.2);
-        top: -0%;
         opacity: 1;
         margin-left: -25vw;
         margin-top: 35vh;
