--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -1107,6 +1107,10 @@ p.resume-prompt {
     border-left: 5px solid #333333;
     border-right: 5px solid #111111;
     border-bottom: 5px solid #555555;
+    background: -webkit-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
+    background: -o-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
+    background: -moz-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
+    background: linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     height: 85vh;
     animation: toptopphoneintroone 2s linear infinite;
     animation-play-state: paused;
