--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -51,7 +51,6 @@
       -ms-transform: scale(1);
       -o-transform: scale(1);
       transform: scale(1);
-      filter: hue-rotate(0deg);
     }
 
     25% {
@@ -1047,6 +1046,7 @@ p.resume-prompt {
     img.resume_pdf{
       display: block;
       position: relative;
+      margin: auto;
       opacity: 1;
     /*  transform: rotateX(180deg) rotateY(180deg); */
       animation: rotateab 1s linear infinite;
@@ -1069,16 +1069,18 @@ p.resume-prompt {
       }
       65% {
         opacity: 1;
+        width: 100vh%;
         top: -5vh;
       }
       80% {
         width: 100%;
         opacity: 1;
         top: -5vh;
+
       }
       100% {
-        width: 80%;
-        top:-7vh;
+        width: 94%;
+        top:-4vh;
         opacity: 1;
       }
     }
@@ -1117,7 +1119,19 @@ p.resume-prompt {
     background: -o-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: -moz-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
-    height: 85vh;
+    animation: resizeingphoneonphone 2s linear infinite;
+    animation-play-state: paused;
+    animation-delay: calc(var(--scroll) * -1s);
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+    }
+    @keyframes resizeingphoneonphone {
+      0%{
+        height:80vh;
+      }
+      100%{
+        height:80vh;
+      }
     }
 
   div.container_one.contactpage{
@@ -1263,7 +1277,7 @@ h2.button-row > a::before, h2.button-row > a::after{
 div.img_relative.labtop{
     width: 95%;
     margin: auto;
-    height: 80vh;
+    height: 95vh;
     top: 15vh;
     }
 
